--- a/gb/23/1/25/n13915377.md
+++ b/gb/23/1/25/n13915377.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【名家专栏】美国房市将持续低迷</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13915393-GettyImages-1233834554-700x420-600x400.jpg" />
 <h6>2021年7月6日，马里兰州安纳波利斯的一所待售房屋。(Jim Watson/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2023年01月25日讯】（英文大纪元专栏作家Milton Ezrati撰文／任季编译）随着美联储（Fed）计划进一步提高利率，住<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>场的未来存在诸多问题。</p>
-<p>抵押贷款利率升得越高，普通<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>人就越无法负担购房。购买和建设将相应地比现在下降得更多。然而，随着时间的推移，一个反向的趋势可能会出现，因为潜在的买家开始意识到住宅房地产是能够为他们部分对冲通货膨胀影响的。因此，尽管融资成本很高，他们还是会购买。</p>
+	<p>【大纪元2023年01月25日讯】（英文大纪元专栏作家Milton Ezrati撰文／任季编译）随着美联储（Fed）计划进一步提高利率，住房市场的未来存在诸多问题。</p>
+<p>抵押贷款利率升得越高，普通美国人就越无法负担购房。购买和建设将相应地比现在下降得更多。然而，随着时间的推移，一个反向的趋势可能会出现，因为潜在的买家开始意识到住宅房地产是能够为他们部分对冲通货膨胀影响的。因此，尽管融资成本很高，他们还是会购买。</p>
 <p>到目前为止，所有的压力都是在下行方面。美联储的反通胀努力推动了抵押贷款利率从2022年初的3%左右上升到目前的6.5%～7%。由于融资成本的上升，根据全国房地产经纪人协会（NAR）的追踪，截至11月，在有数据可查的最近12个月里，房屋购买力相应地下降了约33%。实际购房也随之下降，在同一时期内下降了15.3%。新房建设也是如此，新房开工率下降了约22.4%。毫不奇怪，房屋价格也在下降。NAR统计的房屋价格中位数从去年6月的高点下降了10.5%。</p>
-<p>这种下行压力将继续存在。美联储主席杰罗姆?鲍威尔已承诺在可预见的未来继续提高利率。当然，美联储的目的不是要伤害住<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%B8%82.md#1">房市</a>场，它关注的是对抗通货膨胀，但引起住房市场的痛苦是一个不可避免的副产品。没有人知道美联储将走多远，甚至主席鲍威尔也不知道。但他已经明确表示，美联储目前的政策将保持不变，直到他和他的顾问们确信通胀力量已经从根本上得到缓解。这意味着还有几次加息。可以肯定的是，未来的这些加息会比去年的加息来得缓和，不那么极端，因此对住房的额外下行压力将不那么强烈，但仍然会很沉重。</p>
-<figure id="attachment_13915396" aria-describedby="caption-attachment-13915396" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13915396-GettyImages-1244432287-1200x815.jpg"><img class="size-large wp-image-13915396" src="https://i.epochtimes.com/assets/uploads/2023/01/id13915396-GettyImages-1244432287-1200x815-600x408.jpg" alt="" width="600" b="408" /></a><figcaption id="caption-attachment-13915396" class="wp-caption-text">2022年9月21日，在华盛顿美联储总部举行的联邦公开市场委员会（FOMC）会议后的新闻发布会上，联邦储备委员会主席杰罗姆?鲍威尔发言。(Mandel Ngan/Getty Images)</figcaption></figure>
+<p>这种下行压力将继续存在。美联储主席杰罗姆?鲍威尔已承诺在可预见的未来继续提高利率。当然，美联储的目的不是要伤害住房市场，它关注的是对抗通货膨胀，但引起住房市场的痛苦是一个不可避免的副产品。没有人知道美联储将走多远，甚至主席鲍威尔也不知道。但他已经明确表示，美联储目前的政策将保持不变，直到他和他的顾问们确信通胀力量已经从根本上得到缓解。这意味着还有几次加息。可以肯定的是，未来的这些加息会比去年的加息来得缓和，不那么极端，因此对住房的额外下行压力将不那么强烈，但仍然会很沉重。</p>
+<figure id="attachment_13915396" aria-describedby="caption-attachment-13915396" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13915396-GettyImages-1244432287-1200x815.jpg"><img decoding="async" class="size-large wp-image-13915396" src="https://i.epochtimes.com/assets/uploads/2023/01/id13915396-GettyImages-1244432287-1200x815-600x408.jpg" alt="" width="600" b="408" /></a><figcaption id="caption-attachment-13915396" class="wp-caption-text">2022年9月21日，在华盛顿美联储总部举行的联邦公开市场委员会（FOMC）会议后的新闻发布会上，联邦储备委员会主席杰罗姆?鲍威尔发言。(Mandel Ngan/Getty Images)</figcaption></figure>
 <p>当然，如果出于某种原因，通胀压力突然自行解除，一切都可以迅速扭转，但这是非常不可能的。历史证明，在过去12～18个月里，经济所遭受的通货膨胀既不容易也不会突然解除。即使在不太可能的情况下，缓解迅速到来，美联储为了确保它工作的成效，也会将反通胀的立场再保持一段时间。这意味着住房方面的利率压力将继续存在，并可能至少持续至今年下半年。</p>
 <p>然而，对通货膨胀的担忧将把一些反向趋势带入住房市场。通胀持续的时间越长，越多的潜在购房者就会意识到，尽管抵押贷款利率上升，但房屋所有权可以对冲通货膨胀，因此就会购买。显然，拥有自己的房子，即使成本很高，也可以解决住房成本，这是一个主要的预算项目。无论他们是免费拥有自己的房产，还是用固定利率的抵押贷款进行融资，他们都可以保持不增加住房成本，在所有东西都涨价的情况下，这是一个不小的好处。</p>
 <p>另外，历史表明在通货膨胀时期，住宅房地产的价值往往优于其它投资，并在通货膨胀之前上升。在20世纪70年代和80年代的最后一次大通胀期间，就是如此。尽管从1970年到1990年的通货膨胀率平均每年达到可怕的6.2%，偶尔甚至会超过10%，但在整个20年期间，住房价值平均每年增长了8.7%。</p>
@@ -23,35 +23,35 @@
 <p>责任编辑：高静#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/20/10/23/n12497123.md#1">【名家专栏】疫情下 美国房市怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/19/n13589547.md#1">【名家专栏】中国买家会永久撤离美国房市吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/11/n13778494.md#1">【名家专栏】左右美国房市的两种力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/27/n13833781.md#1">【名家专栏】抵押贷款利率上升造成房市疲软</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/10/23/n12497123.md#1">【名家专栏】疫情下 美国房市怎么了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/2/19/n13589547.md#1">【名家专栏】中国买家会永久撤离美国房市吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/7/11/n13778494.md#1">【名家专栏】左右美国房市的两种力量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/27/n13833781.md#1">【名家专栏】抵押贷款利率上升造成房市疲软</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752586.md#1" target="_blank">共产暴政录：毛泽东同学夏曦“肃反”创纪录</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/2/n9690997.md#1" target="_blank">修炼两年顽症消失 德国女士感恩大法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/4/n9806020.md#1" target="_blank">刘晓：几置李锐于死地的“革命母亲”范元甄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/20/n7912178.md#1" target="_blank">前军士长：四代早逝的厄运到我而止</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079824.md#1">中秋节：最接近仙界时空的节日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081525.md#1">给汉武帝送了两任皇后、两位大将军！真实的平阳公主让你意想不到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064455.md#1">【古道人生】十几岁镖师女押运数十万银到四川</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083923.md#1">【未解之谜】墨西哥外星人事件大揭秘</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/1/n14085717.md#1">斯里兰卡男制香师转生为女孩 找到前世家人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14088281.md#1">【菁英论坛】逢苏联寿期 习反常发布十一讲话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14088133.md#1">【时事金扫描】泰国曼谷枪声 中国游客亡命异乡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/4/n14088164.md#1">【新闻大破解】印太联防水下过招 中共头痛了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087333.md#1">【更新】台风小犬逼近 4日台湾各地停班课一览</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087020.md#1">亚运会惊现“64”照 官媒刊登后急删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087156.md#1">月饼滞销 彩票兴旺 专家：民众对未来无信心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086919.md#1">范冰冰亮相西班牙影展闭幕式 造型引两极反应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087225.md#1">贝克汉正优雅地老去愿意当爷爷 贝嫂拒绝变老</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087587.md#1">高云翔因卷入性侵案形象大跌 压6年剧集曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087535.md#1">生完二胎坐月子 余香凝入围金马影后喜极而泣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087363.md#1">金马60入围揭晓 许光汉林柏宏与阮经天争影帝</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/28/n14083421.md#1">微塑料已进入心脏 小心5大健康危害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079990.md#1">医师荐4茶饮 消脂减赘肉 4种体型这样瘦！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/2/n14086468.md#1">如何在长程航班睡个好觉？ 专家提多项建言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045888.md#1">心脏决定长寿 这样测心脏年龄 7方法让它变年轻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/3/n14087196.md#1">香蕉在剥皮之前要先洗一洗？ 专家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306679.md#1">【菁英论坛】股市大震荡 如何冲击全球经济</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306133.md#1">【新闻欣视角】中国富豪“润”更多 中共又失老朋友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306705.md#1">【马克时空】乌克兰F-16终成军 配什么武器</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305316.md#1">分析：金价创历史新高 或反过来抑制需求</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305216.md#1">唐山打人事件再引关注 警察异地实名举报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305084.md#1">【更新】2024年巴黎奥运奖牌榜 8月5日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304932.md#1">《龙卷风暴》全球票房不敷成本 8月线上发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304841.md#1">TWICE周子瑜首张个人专辑 9月6日发行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305052.md#1">《星际异攻队》10年前被看衰 “星爵”从傻蛋翻身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304554.md#1">蔬菜煎蛋加什么“菜”最对味？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305178.md#1">嫩化牛排简单用一物 你的橱柜里就有</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14304786.md#1">蛋黄越橘越营养？营养师揭鸡蛋6大迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/26/n14298933.md#1">常常咳嗽吗？2食疗帮你摆脱反复久咳</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/25/n13915377.htm">【名家专栏】美国房市将持续低迷</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/25/n13915377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/25/n13915377.htm">【名家专栏】美国房市将持续低迷</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/25/n13915377.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
